--- a/src/components/Slider-01/Slider.css
+++ b/src/components/Slider-01/Slider.css
@@ -35,7 +35,7 @@
 
   .scroll-button {
     cursor: pointer;
-    -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
-    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+    /* -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7)); */
   }
   
